# stock-market-prediction

./: pyproject.toml
cnn_model/: basic-cnn-pytorch.ipynb  basic-cnn.ipynb  basic-cnn.py  basic-lstm-pytorch.ipynb  download_to_csv.py
ml_projets/: download_to_csv.py  split_sequence.py  test-gpu.py
