[tool.poetry]
name = "ml-projets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.23.0"
Nasdaq-Data-Link = "^1.0.2"
sklearn = "^0.0"
pandas = "^1.4.3"
matplotlib = "^3.5.2"
yfinance = "^0.1.72"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipykernel = "^6.15.0"
pretty-errors = "^1.2.25"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
